# ghc-stack-annotations

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  ghc-stack-annotations.cabal
.github/workflows/: haskell.yml
cbits/: macros.h
docs/: Releasing.md
src/GHC/Stack/: Annotation.hs
src/GHC/Stack/Annotation/: Compat.hs  Types.hs  UnliftIO.hs
src/GHC/Stack/Annotation/Compat/: Class.hs
test/: Compat.hs  Main.hs
