cabal-version: 3.14
name: ghc-stack-annotations
version: 0.1.0.0
synopsis: RTS Callstack annotation library
description: A compatibility library for the RTS Callstack annotations introduced in GHC 9.14.
             .
             Allows you to use the stack annotations without having to worry about older GHC versions.
             As stack annotations rely on the newly introduced 'AnnFrame' stack frame type, this library
             is operationally a NO-OP for GHC versions below 9.14.
             .
             For GHC <9.14, this library exposes an API identical to 'GHC.Stack.Annotation.Experimental' including
             data types and type classes for writing 'StackAnnotation' instances, without worrying about backwards
             compatibility.
             For GHC >=9.14, this library re-exports the API of 'GHC.Stack.Annotation.Experimental'.
category: development, BSD
license: BSD-3-Clause
license-file: LICENSE
author: Hannes Siebenhandl, Matthew Pickering
maintainer: hannes@well-typed.com
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with: GHC ==9.14 || ==9.12 || ==9.10 || ==9.8

common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    GADTs
    ImplicitParams
    RankNTypes

library
  import: warnings, exts
  exposed-modules: GHC.Stack.Annotation
  build-depends:
    base >=4.19.1 && <5,

  if impl(ghc >=9.14)
    build-depends:
      ghc-internal >= 9.1400 && <10,
      ghc-experimental >= 9.1400.0 && <10,
  hs-source-dirs: src
  default-language: Haskell2010

source-repository head
  location: https://github.com/well-typed/ghc-stack-annotations
  type: git
